Changed EventQueue
Now uses a separate queue for each thread and events are merged when
they are output. Requires LockDataCapture and
ReentrantReadWriteLockDataCapture to ignore events in the
concurrencyvisualizer package.